# stored-procedures-through-python

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
dbprocedures/: __init__.py  core.py
procedures/: __init__.py  core.py
