[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "procedures"
version = "0.1.0"
description = "Fetch and execute MySQL queries by proc_name, returning a pandas DataFrame."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pymysql",
    "pandas",
    "python-dotenv",
]

[project.urls]
Source = "https://github.com/your-org/db_query_lib"
