[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbprocedures"          
version = "0.1.2"
description = "Fetch and execute MySQL queries by proc_name, returning a pandas DataFrame."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }   
authors = [
    { name = "Aditya Shetty", email = "adityashetty120@gmail.com" }
]
keywords = ["mysql", "database", "pandas", "sql", "stored procedures"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pymysql",
    "pandas",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/adityashetty120/stored-procedures-through-python"
Source = "https://github.com/adityashetty120/stored-procedures-through-python"
